fix: side panel details overflows on x axis

--- a/src/discrete-layer/components/layer-details/layer-details.css
+++ b/src/discrete-layer/components/layer-details/layer-details.css
@@ -22,10 +22,11 @@
 .categoryFieldsContainer {
   display: flex;
   flex-wrap: wrap;
-  flex: 100%;
+  flex: 100% 1;
   margin-bottom: 8px;
   align-items: center;
   justify-content: space-between;
+  width: 100%;
 }
 
 .categoryField {
@@ -66,6 +67,7 @@
   overflow: hidden;
   flex: 1 1;
   padding: 0 1px;
+  margin: 0 2px;
   text-align: left;
 }
 
